--- a/r_Rmd/March 2022.html
+++ b/r_Rmd/March 2022.html
@@ -97,6 +97,10 @@
 <h2 id="toc-title">Table of contents</h2>
 <ul>
 <li><a href="#initial-quarto-setup-and-testing" class="nav-link active" data-scroll-target="#initial-quarto-setup-and-testing">20220301: Initial Quarto Setup and Testing</a></li>
+<li><a href="#and-20220303-trying-challenge-1-of-the-unlocked-challenge" class="nav-link" data-scroll-target="#and-20220303-trying-challenge-1-of-the-unlocked-challenge">20220302 and 20220303: Trying Challenge #1 of the <span>Unlocked</span> <span>Challenge</span></a></li>
+<li><a href="#and-09-still-working-on-unlocked-challenge-1" class="nav-link" data-scroll-target="#and-09-still-working-on-unlocked-challenge-1">20220304, 07 and 09: Still working on Unlocked Challenge #1</a></li>
+<li><a href="#unlocked-challenge-2---natural-language-processing." class="nav-link" data-scroll-target="#unlocked-challenge-2---natural-language-processing.">20220310, 20220311, 20220314-16: Unlocked Challenge #2 - Natural Language Processing.</a></li>
+<li><a href="#trying-something-new" class="nav-link" data-scroll-target="#trying-something-new">20220317: Trying something new</a></li>
 </ul>
 </nav>
 </div>
@@ -121,6 +125,68 @@
 <span id="cb1-10"><a href="#cb1-10" aria-hidden="true" tabindex="-1"></a>  <span class="fu">facet_wrap</span>(<span class="sc">~</span> drv)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 <div class="cell-output-display">
 <p><img src="C-/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/March_2022/test-plot-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+</section>
+<section id="and-20220303-trying-challenge-1-of-the-unlocked-challenge" class="level1">
+<h1>20220302 and 20220303: Trying Challenge #1 of the <a href="https://www.hp.com/us-en/workstations/industries/data-science/unlocked-challenge.html">Unlocked</a> <a href="https://github.com/Z-Unlocked/Unlocked_Challenge_1">Challenge</a></h1>
+<div class="cell">
+
+</div>
+</section>
+<section id="and-09-still-working-on-unlocked-challenge-1" class="level1">
+<h1>20220304, 07 and 09: Still working on Unlocked Challenge #1</h1>
+<div class="cell">
+
+</div>
+<div class="cell">
+
+</div>
+<div class="cell">
+
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="C:/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/outputs/z_hp/Challenge%201%20Land%20Use%202018.png" class="img-fluid" width="700"></p>
+</div>
+</div>
+</section>
+<section id="unlocked-challenge-2---natural-language-processing." class="level1">
+<h1>20220310, 20220311, 20220314-16: Unlocked Challenge #2 - Natural Language Processing.</h1>
+<div class="cell">
+
+</div>
+<div class="cell">
+
+</div>
+<div class="cell">
+
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="C:/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/data/z_hp/challenge-2/LDA%20Summary%20Table.png" class="img-fluid" width="407"></p>
+</div>
+</div>
+</section>
+<section id="trying-something-new" class="level1">
+<h1>20220317: Trying something new</h1>
+<p>I don’t know enough about audio or image analysis in R to try Challenges #3 and #4 of the Unlocked Challenge.</p>
+<p>Trying {flametree}</p>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="C-/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/March_2022/flametree-plots-1.png" class="img-fluid" width="672"></p>
+</div>
+<div class="cell-output-display">
+<p><img src="C-/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/March_2022/flametree-plots-2.png" class="img-fluid" width="672"></p>
+</div>
+<div class="cell-output-display">
+<p><img src="C-/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/March_2022/flametree-plots-3.png" class="img-fluid" width="672"></p>
+</div>
+<div class="cell-output-display">
+<p><img src="C-/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/March_2022/flametree-plots-4.png" class="img-fluid" width="672"></p>
+</div>
+<div class="cell-output-display">
+<p><img src="C-/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/March_2022/flametree-plots-5.png" class="img-fluid" width="672"></p>
 </div>
 </div>
 </section>
