--- a/r_Rmd/March 2022.html
+++ b/r_Rmd/March 2022.html
@@ -110,6 +110,8 @@
 <li><a href="#and-23-tidytuesday-and-names" class="nav-link" data-scroll-target="#and-23-tidytuesday-and-names">20220322 and 23: #TidyTuesday and Names</a></li>
 <li><a href="#endnote" class="nav-link" data-scroll-target="#endnote">20220324: Endnote?</a></li>
 <li><a href="#trying-ricv" class="nav-link" data-scroll-target="#trying-ricv">20220325: Trying <strong><span>{ricv}</span></strong></a></li>
+<li><a href="#trying-debug-true-for-element_text" class="nav-link" data-scroll-target="#trying-debug-true-for-element_text">20220328: Trying <code>debug = TRUE</code> for <code>element_text</code></a></li>
+<li><a href="#tidytuesday-and-ncaa-sports-funding" class="nav-link" data-scroll-target="#tidytuesday-and-ncaa-sports-funding">20220329 - 20220331: #TidyTuesday and NCAA Sports Funding</a></li>
 </ul>
 </nav>
 </div>
@@ -246,6 +248,29 @@ attr(,"class")
 <div class="cell-output-display">
 <div id="htmlwidget-af5e63412ae617b6b8f8" style="width:100%;height:464px;" class="ricv html-widget"></div>
 <script type="application/json" data-for="htmlwidget-af5e63412ae617b6b8f8">{"x":{"img1":"C:/Users/2513851/OneDrive - University of Arkansas for Medical Sciences/work/Daily R/exports/loess.jpg","img2":"C:/Users/2513851/OneDrive - University of Arkansas for Medical Sciences/work/Daily R/exports/linear.jpg","options":[],"css":null},"evals":[],"jsHooks":[]}</script>
+</div>
+</div>
+</section>
+<section id="trying-debug-true-for-element_text" class="level1">
+<h1>20220328: Trying <code>debug = TRUE</code> for <code>element_text</code></h1>
+<p>This gives you a visual cue for where the <code>element_text</code> is anchored. Could be useful for accurately placing annotations, etc.</p>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="C-/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/March_2022/debug-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+</section>
+<section id="tidytuesday-and-ncaa-sports-funding" class="level1">
+<h1>20220329 - 20220331: #TidyTuesday and NCAA Sports Funding</h1>
+<div class="cell">
+
+</div>
+<div class="cell">
+
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="C:/Users/2513851/OneDrive%20-%20University%20of%20Arkansas%20for%20Medical%20Sciences/work/Daily%20R/exports/ncaa.png" class="img-fluid" width="939"></p>
 </div>
 </div>
 </section>
